--- a/views/static/css/check.css
+++ b/views/static/css/check.css
@@ -7,8 +7,6 @@ body {
   align-items: center;
   flex-direction: column;
 
-  height: 100vh;
-
   background-color: rgb(194, 230, 230);
 
   font-family: Arial, Helvetica, sans-serif;
@@ -27,7 +25,7 @@ header {
   text-align: center;
 
   width: 100%;
-  max-height: 10vh;
+  height: auto;
 
   background-color: #283b80;
   padding: 8px 20px;
@@ -41,15 +39,16 @@ header p {
   font-size: clamp(12px, 1.2vw, 16px);
 
   align-self: center;
+
+  color: rgb(205, 199, 186);
 }
 
 main {
   display: flex;
   flex-direction: column;
-  align-self: center;
-  justify-self: right;
+  
 
-  gap: 3vh;
+  padding-top: 70px;
 }
 
 section {
@@ -65,6 +64,7 @@ section {
   align-items: center;
 
   padding: 15px;
+  margin-bottom: 20px;
 
   border-radius: 20px;
 
@@ -74,27 +74,31 @@ section {
 form {
   user-select: none;
   
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-areas:
+    "a a"
+    "b c"
+    "d e"
+    "f g"
+    "h i"
+    "j k"
+    "l m"
+    "n n";
 
-  gap: max(12px, 2vmin);
+  gap: 14px;
 
-  margin-top: 10px;
+  padding: 5px;
 }
 
-label {
-  user-select: none;
+img {
+  width: 100vw;
+  height: 280px;
+  object-fit: cover;
 
-  font-size: clamp(14px, 1.5vmax, 16px);
-  font-weight: 600;
+  border-style: dotted;
+  border-radius: 0px 0px 40px 40px;
 
-  color: rgb(23 18 9);
-
-  text-decoration: none;
-
-  padding: 10px 5px 10px 5px;
-
-  border-radius: 20px;
+  padding-bottom: 20px;
 }
 
 .entries {
@@ -139,7 +143,10 @@ h1 {
 h2 {
   color: rgb(23 18 9);
 
-  font-size: clamp(18px, 3vmax, 20px)
+  font-size: clamp(18px, 3vmax, 20px);
+
+  grid-area: a;
+  justify-self: center;
 }
 
 h3 {
@@ -149,15 +156,50 @@ h3 {
 p {
   user-select: none;
 
-  text-align: center;
+  text-align: left;
 
   font-style: italic;
   font-weight: 800;
   font-size: 16px;
 
-  color: rgb(205, 199, 186);
+  color: rgb(26 26 25);
   
-  margin: 0;
+  margin: 6px 0px;
+}
+
+span {
+  user-select: none;
+
+  text-align: left;
+
+  font-weight: 800;
+  font-size: 16px;
+
+  color: rgb(26 26 25);
+}
+
+a {
+  user-select: none;
+  text-decoration: none;
+
+  text-align: center;
+
+  padding: 4px 16px 4px 16px;
+  
+  background-color: rgb(92 35 41);
+
+  color: rgb(228, 195, 133);
+
+  font-weight: 600;
+  font-size: 1.1em;
+
+  border-radius: 10px;
+  
+  transition: color 0.2s ease-in-out;
+}
+
+a:hover {
+  color: rgb(255, 255, 255);
 }
 
 button {
@@ -177,10 +219,13 @@ button {
   text-decoration: none;
 
   padding: 3px 15px 6px 15px;
+  margin-top: 30px;
 
   border-radius: 20px;
   border-style: groove;
   border-width: 2px;
+
+  grid-area: n;
 }
 
 button:hover {
