--- a/views/public/landing.ejs
+++ b/views/public/landing.ejs
@@ -32,7 +32,7 @@
       </header>
       
       <nav>
-        <a href="/home">Soy estudiante</a>
+        <a href="/shop">Soy estudiante</a>
         <a href="/login">Soy staff</a>
       </nav>
     </div>
