--- a/views/static/css/order.css
+++ b/views/static/css/order.css
@@ -7,8 +7,6 @@ body {
   align-items: center;
   flex-direction: column;
 
-  height: 100vh;
-
   background-color: rgb(194, 230, 230);
 
   font-family: Arial, Helvetica, sans-serif;
@@ -27,7 +25,7 @@ header {
   text-align: center;
 
   width: 100%;
-  max-height: 10vh;
+  height: auto;
 
   background-color: #283b80;
   padding: 8px 20px;
@@ -41,34 +39,19 @@ header p {
   font-size: clamp(12px, 1.2vw, 16px);
 
   align-self: center;
+
+  color: rgb(205, 199, 186);
 }
 
 main {
   display: flex;
   flex-direction: column;
-  align-self: center;
-  justify-self: right;
-
-  gap: 3vh;
 }
 
 section {
-  width: max-content;
-  max-width: 300px;
-  height: fit-content;
-
-  align-self: center;
-  justify-self: center;
-
   display: flex;
   flex-direction: column;
   align-items: center;
-
-  padding: 15px;
-
-  border-radius: 20px;
-
-  gap: 10px;
 }
 
 form {
@@ -77,24 +60,20 @@ form {
   display: flex;
   flex-direction: column;
 
-  gap: max(12px, 2vmin);
+  gap: 14px;
 
-  margin-top: 10px;
+  margin-top: 50px;
 }
 
-label {
-  user-select: none;
+img {
+  width: 100vw;
+  height: 280px;
+  object-fit: cover;
 
-  font-size: clamp(14px, 1.5vmax, 16px);
-  font-weight: 600;
+  border-style: dotted;
+  border-radius: 0px 0px 40px 40px;
 
-  color: rgb(23 18 9);
-
-  text-decoration: none;
-
-  padding: 10px 5px 10px 5px;
-
-  border-radius: 20px;
+  margin-bottom: 20px;
 }
 
 .entries {
@@ -113,12 +92,6 @@ select, input {
   border-radius: 20px;
 
   font-size: max(16px, 2vmin);
-}
-
-.container {
-  background-color: rgb(140 155 155);
-
-  outline: 3px dashed #283b80;
 }
 
 h1, h2, h3 {
@@ -149,15 +122,15 @@ h3 {
 p {
   user-select: none;
 
-  text-align: center;
+  text-align: left;
 
   font-style: italic;
   font-weight: 800;
   font-size: 16px;
 
-  color: rgb(205, 199, 186);
+  color: rgb(26 26 25);
   
-  margin: 0;
+  margin: 6px 0px;
 }
 
 button {
@@ -177,6 +150,7 @@ button {
   text-decoration: none;
 
   padding: 3px 15px 6px 15px;
+  margin-top: 30px;
 
   border-radius: 20px;
   border-style: groove;
