--- a/views/public/check.ejs
+++ b/views/public/check.ejs
@@ -44,6 +44,14 @@
               value="<%= data.clientname %>"
             />
             <span><%= data.clientname %></span>
+
+            <p>Correo del cliente:</p>
+            <input
+              type="hidden"
+              name="clientgmail"
+              value="<%= data.clientgmail %>"
+            />
+            <span><%= data.clientgmail %></span>
     
             <p>Hora de entrega:</p>
             <input
