--- a/views/public/order.ejs
+++ b/views/public/order.ejs
@@ -88,6 +88,15 @@
               <option value="PSE">PSE</option>
             </select>
 
+            <input
+              class="entries"
+              type="email"
+              name="clientgmail"
+              placeholder="Correo G-mail"
+              pattern="[a-zA-Z0-9._%+-]+@gmail\.com"
+              required
+            />
+
             <button type="submit">Reservar</button>
           </form>
         </section>
